# peft-playground

./: .gitignore  README.md  pyproject.toml
llmin/: similarity.py  svd.py  utils.py
llmin/core/: minimizer.py
llmin/distributed/: svd.py
llmin/templates/: adapter_config.j2
notebooks/: cut.ipynb  package.ipynb  requirements.txt  similarities.csv  similarity.ipynb  sparsity.ipynb  test.ipynb  test_high_compression.ipynb  vectors.ipynb  vectors2.ipynb
tests/: test_peft.py  test_replicate.py
